fix block button add subscription

--- a/src/index.html
+++ b/src/index.html
@@ -32,13 +32,27 @@
         <h2 class="header__title">
           ХУДОЖНІЙ МУЗЕЙ
         </h2>
-        <div class="header__drop-menu">
-          <div class="header__ticket">
+        <!--<div class="button header__button">
+          <div class="button__field header__button-field">
             КВИТКИ
           </div>
-          <a href="#" class="header__button button button--header">
+          <a href="#" class="button button__click button--header">
           </a>
-        </div>
+        </div>-->
+        <form
+          action="#"
+          method="get"
+          class="header__form"
+        >
+          <input
+            type="text"
+            name="email"
+            value="КВИТКИ"
+            class="header__input-text"
+            readonly
+          >
+          <button class="button button--header"></button>
+        </form>
         <p class="header__events">
           ПОДІЇ
         </p>
@@ -222,28 +236,28 @@
               <div class="slider__image">
                 <div class="slider__photo">
                   <img
-                    src="./images/pictures/slider/photo1_mobile.png"
+                    src="./images/pictures/slider/photo1_tablet.png"
                     alt="photo-1"
                     class="slider__img"
                   >
                 </div>
                 <div class="slider__photo">
                   <img
-                  src="./images/pictures/slider/photo1_mobile.png"
+                  src="./images/pictures/slider/photo2_tablet.png"
                   alt="photo-1"
                   class="slider__img"
                 >
                 </div>
                 <div class="slider__photo">
                   <img
-                  src="./images/pictures/slider/photo1_mobile.png"
+                  src="./images/pictures/slider/photo1_tablet.png"
                   alt="photo-1"
                   class="slider__img"
                 >
                 </div>
                 <div class="slider__photo">
                   <img
-                  src="./images/pictures/slider/photo1_mobile.png"
+                  src="./images/pictures/slider/photo1_tablet.png"
                   alt="photo-1"
                   class="slider__img"
                 >
@@ -296,6 +310,28 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <section class="subscription page__section page__section--subscription">
+      <div class="container">
+        <div class="subscription__title">
+          Підписка
+        </div>
+        <div class="subscription__subtitle">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </div>
+        <form
+          action="#"
+          method="get" class="subscription__form"
+        >
+          <input
+            type="email"
+            name="email"
+            placeholder="E-mail" class="subscription__email"
+            required
+          >
+          <button class="button button--subscription"></button>
+        </form>
       </div>
     </section>
   </body>
