--- a/src/index.html
+++ b/src/index.html
@@ -334,5 +334,153 @@
         </form>
       </div>
     </section>
+    <footer class="footer">
+      <div class="container">
+        <div class="grid">
+          <div class="
+            footer__top
+            grid__item
+            grid__item--1-2
+            grid__item--tablet-1-1
+            grid__item--desktop-1-1"
+          >
+            <a href="#" class="footer__logo">
+              <img
+                src="./images/icon/NA_MU_logo.svg" alt="logo"
+                class="logo__footer"
+              >
+            </a>
+            <div class="footer__social">
+              <a href="#" class="footer__facebook">
+                <img
+                  src="./images/icon/Facebook.svg" alt="faceboock"
+                  class="icon icon--facebook"
+                >
+              </a>
+              <a href="#">
+                <img
+                src="./images/icon/instagramm.svg" alt="instagramm"
+                class="icon icon--instagramm"
+              >
+              </a>
+            </div>
+          </div>
+          <div class="grid__item grid__item--tablet-2-3 grid__item--desktop-3-4">
+            <div class="footer__schedule">
+              <div class="footer__schedule footer__schedule--title">
+                Графік роботи
+              </div>
+              <div class="footer__schedule-description">
+                <div class="footer__schedule-description footer__schedule-description--time">
+                  <div>
+                    12:00 — 20:00 <h5>середа</h5>
+                    <br>
+                    12:00 — 20:00 <h5>четвер</h5>
+                    <br>
+                    12:00 — 20:00 <h5>п’ятниця</h5>
+                    <br>
+                    11:00 — 19:00 <h5>субота</h5>
+                    <br>
+                    11:00 — 19:00 <h5>неділя</h5>
+                    <br>
+                  </div>
+                </div>
+                <div class="footer__schedule-description footer__schedule-description--note">
+                  <div>
+                    <h5>
+                      Вихідні:
+                      понеділок, вівторок
+                    </h5>
+                    <br>
+                    <h5>
+                      Каса припиняє роботу за
+                      <div class="footer__schedule-description--bold">
+                        1
+                      </div>
+                      годину
+                      до закриття музею
+                    </h5>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+          <div class="grid__item grid__item--tablet-4-5 grid__item--desktop-5-6">
+            <div class="footer__contacts footer__contacts--title">
+              Контакти:
+            </div>
+            <div class="footer__contacts footer__contacts--adress">
+              вул. М. Грушевського, 6; Київ, 01001
+              тел.+38&nbsp;(044) 278&#8209;13&#8209;57
+              факс+38&nbsp;(044) 278&#8209;74&#8209;54
+            </div>
+            <div class="footer__contacts footer__contacts--email-title">
+              e-mail:
+              <a href="#" class="footer__contacts--email-adress">
+                info@namu.kiev.ua
+              </a>
+            </div>
+          </div>
+          <div class="
+            grid
+            grid__item--1-2 grid__item--tablet-2-5 grid__item--desktop-7-7
+            footer__line"
+          >
+          </div>
+          <div class="
+            footer__menu
+            grid
+            grid__item
+            grid__item--desktop-8-12"
+          >
+            <ul class="footer__menu-list">
+              <div class="grid grid__item--desktop-8-12">
+                <li class="
+                menu__item footer__menu-item grid__item grid__item--tablet-2-3">
+                  <a href="#" class="menu__link footer__menu-link">
+                      Галерея
+                  </a>
+                </li>
+                <li class="
+                menu__item
+                footer__menu-item
+                grid__item
+                grid__item--tablet-4-5">
+                  <a href="#" class="menu__link footer__menu-link">
+                      Про Нас
+                  </a>
+                </li>
+                <li class="
+                  menu__item footer__menu-item
+                  grid__item
+                  grid__item--tablet-2-3"
+                >
+                  <a href="#"  class="menu__link footer__menu-link">
+                      Виставки та події
+                  </a>
+                </li>
+                <li class="
+                  menu__item footer__menu-item
+                  grid__item--tablet-4-5"
+                >
+                  <a href="#" class="menu__link footer__menu-link">
+                      Контакти
+                  </a>
+                </li>
+              </div>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__bottom">
+          <div class="footer__designed">
+            Designed by Zhyriada Marina
+          </div>
+          <div class="footer__copyright">
+            Copyright © 2019. All Rights Reserved.
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
