--- a/src/index.html
+++ b/src/index.html
@@ -336,7 +336,7 @@
     </section>
     <footer class="footer">
       <div class="container">
-        <div class="grid">
+        <div class="grid footer__grid">
           <div class="
             footer__top
             grid__item
@@ -372,38 +372,46 @@
               </div>
               <div class="footer__schedule-description">
                 <div class="footer__schedule-description footer__schedule-description--time">
-                  <div>
-                    12:00 — 20:00 <h5>середа</h5>
+                  <div class="footer__schedule-description footer__schedule-description--bold">
+                    12:00 — 20:00
+                    <div class="footer__schedule-description footer__schedule-description--normal">
+                      середа
+                    </div>
                     <br>
-                    12:00 — 20:00 <h5>четвер</h5>
+                    12:00 — 20:00
+                    <div class="footer__schedule-description footer__schedule-description--normal">
+                      четвер
+                    </div>
                     <br>
-                    12:00 — 20:00 <h5>п’ятниця</h5>
+                    12:00 — 20:00
+                    <div class="footer__schedule-description footer__schedule-description--normal">
+                      п’ятниця
+                    </div>
                     <br>
-                    11:00 — 19:00 <h5>субота</h5>
+                    11:00 — 19:00
+                    <div class="footer__schedule-description footer__schedule-description--normal">
+                      субота
+                    </div>
                     <br>
-                    11:00 — 19:00 <h5>неділя</h5>
+                    11:00 — 19:00
+                    <div class="footer__schedule-description footer__schedule-description--normal">
+                    неділя
+                    </div>
                     <br>
                   </div>
                 </div>
                 <div class="footer__schedule-description footer__schedule-description--note">
-                  <div>
-                    <h5>
-                      Вихідні:
-                      понеділок, вівторок
-                    </h5>
-                    <br>
-                    <h5>
-                      Каса припиняє роботу за
-                      <div class="footer__schedule-description--bold">
+                  Вихідні:
+                  понеділок, вівторок
+                  <br>
+                  Каса припиняє роботу за
+                  <div class="footer__schedule-description--bold">
                         1
                       </div>
                       годину
                       до закриття музею
-                    </h5>
                   </div>
-                </div>
               </div>
-
             </div>
           </div>
           <div class="grid__item grid__item--tablet-4-5 grid__item--desktop-5-6">
@@ -428,49 +436,43 @@
             footer__line"
           >
           </div>
-          <div class="
-            footer__menu
-            grid
+          <ul class="
+            footer__menu-list
             grid__item
-            grid__item--desktop-8-12"
-          >
-            <ul class="footer__menu-list">
-              <div class="grid grid__item--desktop-8-12">
-                <li class="
-                menu__item footer__menu-item grid__item grid__item--tablet-2-3">
-                  <a href="#" class="menu__link footer__menu-link">
-                      Галерея
-                  </a>
-                </li>
-                <li class="
-                menu__item
-                footer__menu-item
-                grid__item
-                grid__item--tablet-4-5">
-                  <a href="#" class="menu__link footer__menu-link">
-                      Про Нас
-                  </a>
-                </li>
-                <li class="
-                  menu__item footer__menu-item
-                  grid__item
-                  grid__item--tablet-2-3"
-                >
-                  <a href="#"  class="menu__link footer__menu-link">
-                      Виставки та події
-                  </a>
-                </li>
-                <li class="
-                  menu__item footer__menu-item
-                  grid__item--tablet-4-5"
-                >
-                  <a href="#" class="menu__link footer__menu-link">
-                      Контакти
-                  </a>
-                </li>
-              </div>
-            </ul>
-          </div>
+            grid__item--tablet-2-3
+            grid__item--desktop-8-9">
+
+            <li class="menu__item footer__menu-item">
+              <a href="#" class="menu__link footer__menu-link">
+                  Галерея
+              </a>
+            </li>
+            <li class="menu__item footer__menu-item">
+              <a href="#"  class="menu__link footer__menu-link">
+                Виставки та події
+              </a>
+            </li>
+          </ul>
+          <ul class="
+            footer__menu-list
+            grid__item
+            grid__item--tablet-4-5
+            grid__item--desktop-10-11
+          ">
+            <li class="menu__item footer__menu-item">
+              <a href="#" class="menu__link footer__menu-link">
+                  Про Нас
+              </a>
+            </li>
+            <li class="
+              menu__item footer__menu-item
+              grid__item--tablet-4-5"
+            >
+              <a href="#" class="menu__link footer__menu-link">
+                  Контакти
+              </a>
+            </li>
+          </ul>
         </div>
         <div class="footer__bottom">
           <div class="footer__designed">
