--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
           <a href="#" class="logo">
             <img 
               class="logo__img" 
-              src="../src/images/NAMU-logo.png" 
+              src="./images/NA MU.svg" 
               alt="NAMU logo"
             >
           </a>
@@ -46,13 +46,15 @@
             </a>
           </div>
 
-          <div class="tickets__place">
-            <div class="tickets__line">  
+          <a href="#events" class="header__link">
+            <div class="tickets__place">
+              <div class="tickets__line">  
+              </div>
+              <div class="tickets__line-title">
+                ПОДІЇ
+              </div>
             </div>
-            <div class="tickets__line-title">
-              ПОДІЇ
-            </div>
-          </div>
+          </a>
         </div>
       </div>
     </header>
@@ -417,163 +419,165 @@
 
     <footer class="footer">
       <div class="container">
-        <div class="footer__top">
-          <div class="footer__icon">
-            <a href="#" class="logo logo--footer">
+        <div class="footer__content">
+          <div class="footer__top">
+            <div class="footer__icon">
+              <a href="#" class="logo logo--footer">
+                <img 
+                  class="logo__img logo__img--footer" 
+                  src="./images/NA MU.svg" 
+                  alt="NAMU logo"
+                >
+              </a>
+  
+              <div class="footer__item">
+                <a 
+                  href="https://www.facebook.com/" 
+                  class="footer__icon-link"
+                  target="_blank"
+                >
+                  <div class="icon icon--facebook">
+                  </div>
+                </a>
+  
+                <a 
+                  href="https://www.instagram.com/" 
+                  class="footer__icon-link"
+                  target="_blank"
+                >
+                  <div class="icon icon--instagram">
+                  </div>
+                </a>
+              </div>
+            </div>
+  
+            <div class="menu-timetable">
+              <div class="menu__wrapper menu__wrapper--footer">
+                <div class="menu-timetable__content">
+                  <div class="menu-timetable__title menu-timetable__title--footer">
+                    Графік роботи
+                  </div>
+                  <ul class="menu-timetable__list menu-timetable__list--footer">
+                    <li>
+                      <strong>
+                        12:00 - 20:00
+                      </strong>
+                      середа
+                    </li>
+  
+                    <li>
+                      <strong>
+                        12:00 - 20:00
+                      </strong>
+                      четверг
+                    </li>
+  
+                    <li>
+                      <strong>
+                        12:00 - 20:00
+                      </strong>
+                      пятниця
+                    </li>
+  
+                    <li>
+                      <strong>
+                        11:00 - 19:00
+                      </strong>
+                      субота
+                    </li>
+  
+                    <li>
+                      <strong>
+                        11:00 - 19:00
+                      </strong>
+                      неділя
+                    </li>
+                  </ul>
+                  <div class="menu-timetable__weekend menu-timetable__weekend--footer">
+                    <strong>Вихідні:</strong>
+                    понеділок, вівторок
+                    <br>
+                    Каса припиняє роботу за 1 годину
+                    до закриття музею
+                  </div>
+                </div>
+  
+                <div class="menu-timetable__contact">
+                  <div class="menu-timetable__contact-title">
+                    Контакти:
+                  </div>
+  
+                  <p class="menu-timetable__contact-paragraph">
+                    <a 
+                      href="https://goo.gl/maps/WqDUzpyb7yrmaTY27" 
+                      class="menu-timetable__contact-link"
+                      target="_blank"
+                    >
+                      вул. М. Грушевського, 6; Київ, 01001
+                    </a>
+                    <br>
+                    <a href="tel:+38 (044) 278-74-54" class="menu-timetable__contact-link">
+                      тел. +38 (044) 278-13-57
+                    </a>
+                    <br>
+                    <a href="tel:+38 (044) 278-74-54" class="menu-timetable__contact-link">
+                      факс +38 (044) 278-74-54
+                    </a>
+                    <br>
+                    <a href="mailto:info@namu.kiev.ua" class="menu-timetable__contact-link">
+                      e-mail: info@namu.kiev.ua
+                    </a>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+  
+          <div class="footer__bottom">
+            <a 
+              href="#"  
+              class="footer__link" 
+            >
               <img 
-                class="logo__img logo__img--footer" 
-                src="../src/images/NAMU-logo.png" 
-                alt="NAMU logo"
+                class="footer__link-img" 
+                src="./images/icons/icon--arrow-top.png" 
+                alt="arrow-top icon link"
               >
             </a>
-
-            <div class="footer__item">
-              <a 
-                href="https://www.facebook.com/" 
-                class="footer__icon-link"
-                target="_blank"
-              >
-                <div class="icon icon--facebook">
+            <nav class="nav nav--footer">
+              <ul class="nav__list nav__list--footer">
+                <div class="nav__list-content">
+                  <li class="nav__item">
+                    <a href="#gallery" class="nav__link nav__link--footer">
+                      Галерея
+                    </a>
+                  </li>
+                  
+                  <li class="nav__item">
+                    <a href="#events" class="nav__link nav__link--footer">
+                      Виставки та
+                      <br>
+                      події
+                    </a>
+                  </li>
                 </div>
-              </a>
-
-              <a 
-                href="https://www.instagram.com/" 
-                class="footer__icon-link"
-                target="_blank"
-              >
-                <div class="icon icon--instagram">
+  
+                <div class="nav__list-content">
+                  <li class="nav__item">
+                    <a href="#events" class="nav__link nav__link--footer">
+                      Про Нас
+                    </a>
+                  </li>
+  
+                  <li class="nav__item">
+                    <a href="#contact" class="nav__link nav__link--footer">
+                      Контакти
+                    </a>
+                  </li>
                 </div>
-              </a>
-            </div>
+              </ul>
+            </nav>
           </div>
-
-          <div class="menu-timetable">
-            <div class="menu__wrapper menu__wrapper--footer">
-              <div class="menu-timetable__content">
-                <div class="menu-timetable__title menu-timetable__title--footer">
-                  Графік роботи
-                </div>
-                <ul class="menu-timetable__list menu-timetable__list--footer">
-                  <li>
-                    <strong>
-                      12:00 - 20:00
-                    </strong>
-                    середа
-                  </li>
-
-                  <li>
-                    <strong>
-                      12:00 - 20:00
-                    </strong>
-                    четверг
-                  </li>
-
-                  <li>
-                    <strong>
-                      12:00 - 20:00
-                    </strong>
-                    пятниця
-                  </li>
-
-                  <li>
-                    <strong>
-                      11:00 - 19:00
-                    </strong>
-                    субота
-                  </li>
-
-                  <li>
-                    <strong>
-                      11:00 - 19:00
-                    </strong>
-                    неділя
-                  </li>
-                </ul>
-                <div class="menu-timetable__weekend menu-timetable__weekend--footer">
-                  <strong>Вихідні:</strong>
-                  понеділок, вівторок
-                  <br>
-                  Каса припиняє роботу за 1 годину
-                  до закриття музею
-                </div>
-              </div>
-
-              <div class="menu-timetable__contact">
-                <div class="menu-timetable__contact-title">
-                  Контакти:
-                </div>
-
-                <p class="menu-timetable__contact-paragraph">
-                  <a 
-                    href="https://goo.gl/maps/WqDUzpyb7yrmaTY27" 
-                    class="menu-timetable__contact-link"
-                    target="_blank"
-                  >
-                    вул. М. Грушевського, 6; Київ, 01001
-                  </a>
-                  <br>
-                  <a href="tel:+38 (044) 278-74-54" class="menu-timetable__contact-link">
-                    тел. +38 (044) 278-13-57
-                  </a>
-                  <br>
-                  <a href="tel:+38 (044) 278-74-54" class="menu-timetable__contact-link">
-                    факс +38 (044) 278-74-54
-                  </a>
-                  <br>
-                  <a href="mailto:info@namu.kiev.ua" class="menu-timetable__contact-link">
-                    e-mail: info@namu.kiev.ua
-                  </a>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="footer__bottom">
-          <a 
-            href="#"  
-            class="footer__link" 
-          >
-            <img 
-              class="footer__link-img" 
-              src="./images/icons/icon--arrow-top.png" 
-              alt="arrow-top icon link"
-            >
-          </a>
-          <nav class="nav nav--footer">
-            <ul class="nav__list nav__list--footer">
-              <div class="nav__list-content">
-                <li class="nav__item">
-                  <a href="#gallery" class="nav__link nav__link--footer">
-                    Галерея
-                  </a>
-                </li>
-                
-                <li class="nav__item">
-                  <a href="#events" class="nav__link nav__link--footer">
-                    Виставки та
-                    <br>
-                    події
-                  </a>
-                </li>
-              </div>
-
-              <div class="nav__list-content">
-                <li class="nav__item">
-                  <a href="#events" class="nav__link nav__link--footer">
-                    Про Нас
-                  </a>
-                </li>
-
-                <li class="nav__item">
-                  <a href="#contact" class="nav__link nav__link--footer">
-                    Контакти
-                  </a>
-                </li>
-              </div>
-            </ul>
-          </nav>
         </div>
       </div>
 
