Museum form done

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
   </head>
   <body class="page__content">
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <script 
+      type="text/javascript" 
+      src="scripts/main.js"
+      defer
+    >
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 
     <header class="header">
@@ -406,7 +411,10 @@
                   class="form__content"
                   required
                 >
-                <button type="submit" class="form__button">
+                <button 
+                  type="submit" 
+                  class="form__button"
+                >
                   <div class="form__button-img">
                   </div>
                 </button>
