tickets link done

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
+    <link rel="icon" href="./images/NAMU-logo.png">
   </head>
   <body class="page__content">
     <script 
@@ -37,19 +38,15 @@
             <br>
             МУЗЕЙ
           </div>
-  
-          <div class="tickets">
+
+          <a href="#tickets" class="tickets">
             <div class="tickets__title">
               квитки
             </div>
-            <a 
-              href="#tickets" 
-              class="tickets__link"
-            >
-              <img src="./images/icons/icon-arrow.png" 
-              alt="arrow icon">
-            </a>
-          </div>
+
+            <img src="./images/Vector-5.svg" 
+            alt="arrow icon" class="tickets__img">
+          </a>
 
           <a href="#events" class="header__link">
             <div class="tickets__place">
