--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,19 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link
+    rel="shortcut icon"
+    href="./images/icon/NA_MU_logo.svg"
+    type="image/svg">
   </head>
   <body class="page__body">
     <script type="text/javascript" src="scripts/main.js"></script>
     <section class="header page__section page__section--header">
-
       <div class="container">
         <div class="header__top">
           <a href="#menu" class="header__icon">
@@ -32,15 +35,8 @@
         <h2 class="header__title">
           ХУДОЖНІЙ МУЗЕЙ
         </h2>
-        <!--<div class="button header__button">
-          <div class="button__field header__button-field">
-            КВИТКИ
-          </div>
-          <a href="#" class="button button__click button--header">
-          </a>
-        </div>-->
         <form
-          action="#"
+          action="#items"
           method="get"
           class="header__form"
         >
@@ -72,22 +68,22 @@
 
               <ul class="menu__list">
                 <li class="menu__item">
-                  <a href="#" class="menu__link">
+                  <a href="#gallery" class="menu__link">
                       Галерея
                   </a>
                 </li>
                 <li class="menu__item">
-                  <a href="#" class="menu__link">
+                  <a href="#subscription" class="menu__link">
                       Про Нас
                   </a>
                 </li>
                 <li class="menu__item">
-                  <a href="#"  class="menu__link">
+                  <a href="#items"  class="menu__link">
                       Виставки та події
                   </a>
                 </li>
                 <li class="menu__item">
-                  <a href="#" class="menu__link">
+                  <a href="#contacts" class="menu__link">
                       Контакти
                   </a>
                 </li>
@@ -135,7 +131,7 @@
       </div>
 
     </nav>
-    <section class="current-events page__section page__section--events">
+    <section class="current-events page__section page__section--events" id="items">
       <div class="container">
         <div class="current-events__title">
           Актуальні події
@@ -181,7 +177,7 @@
         </div>
       </div>
     </section>
-    <section class="lecture page__section page__section--lecture">
+    <section class="lecture page__section page__section--lecture" id="lecture">
       <div class="container lecture__container">
         <div class="lecture__info">
           <div class="lecture__info-content">
@@ -200,7 +196,7 @@
         </div>
       </div>
     </section>
-    <section class="gallery page__section page__section--gallery">
+    <section class="gallery page__section page__section--gallery" id="gallery">
       <div class="container">
         <div class="gallery__title">
           Галерея
@@ -272,47 +268,59 @@
             <label for="switch-4" class="slider__switch-label"></label>
           </div>
         </div>
-        <div class="gallery__images grid">
+        <div class="gallery__images">
           <div class="grid">
-            <div class="gallery__desktop grid__item grid__item--1-4">
+            <div class="
+              grid__item
+              grid__item--desktop-1-4
+              gallery__scale"
+            >
               <img
                 src="./images/pictures/gallery_desktop/1.png"
                 alt="img-1"
-                class="gallery__image"
+                class="gallery__images"
               >
             </div>
-            <div class="gallery__desktop grid__item grid__item--5-12">
+            <div class="
+              grid__item
+              grid__item--desktop-5-12
+              gallery__scale"
+            >
               <img
-                src="./images/pictures/gallery_desktop/2.png"
-                alt="img-2"
-                class="gallery__image"
-              >
+              src="./images/pictures/gallery_desktop/2.png"
+              alt="img-2"
+              class="gallery__images"
+            >
             </div>
           </div>
           <div class="grid">
             <div class="
-              gallery__desktop
               grid__item
-              grid__item--1-8"
+              grid__item--desktop-1-8
+              gallery__scale"
             >
               <img
                 src="./images/pictures/gallery_desktop/3.png"
                 alt="img-3"
-                class="gallery__image"
+                class="gallery__images"
               >
             </div>
-            <div class="gallery__desktop grid__item grid__item--9-12">
+            <div class="
+              grid__item
+              grid__item--desktop-9-12
+              gallery__scale"
+            >
               <img
                 src="./images/pictures/gallery_desktop/4.png"
                 alt="img-4"
-                class="gallery__image"
+                class="gallery__images"
               >
             </div>
           </div>
         </div>
       </div>
     </section>
-    <section class="subscription page__section page__section--subscription">
+    <section class="subscription page__section page__section--subscription" id="subscription">
       <div class="container">
         <div class="subscription__title">
           Підписка
@@ -351,13 +359,16 @@
               >
             </a>
             <div class="footer__social">
-              <a href="#" class="footer__facebook">
+              <a
+                href="https://uk-ua.facebook.com/pages/category/Art-Museum/namu.museum/posts/" class="footer__facebook"
+                target="_blank"
+              >
                 <img
                   src="./images/icon/Facebook.svg" alt="faceboock"
                   class="icon icon--facebook"
                 >
               </a>
-              <a href="#">
+              <a href="https://www.instagram.com/namu.museum/" target="_blank">
                 <img
                 src="./images/icon/instagramm.svg" alt="instagramm"
                 class="icon icon--instagramm"
@@ -365,7 +376,11 @@
               </a>
             </div>
           </div>
-          <div class="grid__item grid__item--tablet-2-3 grid__item--desktop-3-4">
+          <div class="
+            grid__item
+            grid__item--1-1
+            grid__item--tablet-2-3 grid__item--desktop-3-4"
+          >
             <div class="footer__schedule">
               <div class="footer__schedule footer__schedule--title">
                 Графік роботи
@@ -404,23 +419,26 @@
                   Вихідні:
                   понеділок, вівторок
                   <br>
-                  Каса припиняє роботу за
-                  <div class="footer__schedule-description--bold">
-                        1
-                  </div>
-                      годину
-                      до закриття музею
+                  Каса припиняє роботу за 1 годину
+                  <br>
+                  до закриття музею
                 </div>
               </div>
             </div>
           </div>
-          <div class="grid__item grid__item--tablet-4-5 grid__item--desktop-5-6">
-            <div class="footer__contacts footer__contacts--title">
+          <div class="
+            grid__item
+            grid__item--2-2
+            grid__item--tablet-4-5 grid__item--desktop-5-6"
+          >
+            <div class="footer__contacts footer__contacts--title" id="contacts">
               Контакти:
             </div>
-            <div class="footer__contacts footer__contacts--adress">
+            <div class="footer__contacts">
               вул. М. Грушевського, 6; Київ, 01001
+              <br>
               тел.+38&nbsp;(044) 278&#8209;13&#8209;57
+              <br>
               факс+38&nbsp;(044) 278&#8209;74&#8209;54
             </div>
             <div class="footer__contacts footer__contacts--email-title">
@@ -430,25 +448,30 @@
               </a>
             </div>
           </div>
+          <a href="#" class="footer__back-button grid grid__item grid__item--1-2">
+
+          </a>
           <div class="
             grid
-            grid__item--1-2 grid__item--tablet-2-5 grid__item--desktop-7-7
+            grid__item--1-2
+            grid__item--tablet-2-5 grid__item--desktop-7-7
             footer__line"
           >
           </div>
           <ul class="
             footer__menu-list
             grid__item
+            grid__item--1-1
             grid__item--tablet-2-3
             grid__item--desktop-8-9">
 
-            <li class="menu__item footer__menu-item">
-              <a href="#" class="menu__link footer__menu-link">
+            <li class="footer__menu-item">
+              <a href="#gallery" class="footer__menu-link">
                   Галерея
               </a>
             </li>
-            <li class="menu__item footer__menu-item">
-              <a href="#"  class="menu__link footer__menu-link">
+            <li class="footer__menu-item">
+              <a href="#items"  class="footer__menu-link">
                 Виставки та події
               </a>
             </li>
@@ -456,19 +479,17 @@
           <ul class="
             footer__menu-list
             grid__item
+            grid__item--2-2
             grid__item--tablet-4-5
             grid__item--desktop-10-11
           ">
-            <li class="menu__item footer__menu-item">
-              <a href="#" class="menu__link footer__menu-link">
+            <li class="footer__menu-item">
+              <a href="#subscription" class="footer__menu-link">
                   Про Нас
               </a>
             </li>
-            <li class="
-              menu__item footer__menu-item
-              grid__item--tablet-4-5"
-            >
-              <a href="#" class="menu__link footer__menu-link">
+            <li class="footer__menu-item">
+              <a href="#contacts" class="footer__menu-link">
                   Контакти
               </a>
             </li>
