rename img files

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     type="image/svg">
   </head>
   <body class="page__body">
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <!--<script type="text/javascript" src="scripts/main.js"></script>-->
     <section class="header page__section page__section--header">
       <div class="container">
         <div class="header__top">
